Fix playwright error

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,7 +44,9 @@ jobs:
 
       run: npm ci || npm install 
 
- 
+    - name: Install Playwright Browsers
+
+      run: npx playwright install --with-deps
 
     - name: Run ESLint 
 
